[project]
name = "labo-ia-arch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-google-genai>=3.1.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
]
